--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
     -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@300;400;500;700&display=swap"
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@300;400;500;700&family=Noto+Naskh+Arabic:wght@400;500;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
   <title>React App</title>
