--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     href="https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@300;400;500;700&family=Noto+Naskh+Arabic:wght@400;500;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
-  <title>React App</title>
+  <title>Mostaql Clone</title>
 </head>
 
 <body>
